[gd_scene load_steps=12 format=2]

[ext_resource path="res://Recursos/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Juego/menus/MenuGameOver.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Environment/ground_grass.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Background/bg_layer1.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Background/bg_layer3.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Background/bg_layer2.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Background/bg_layer4.png" type="Texture" id=7]
[ext_resource path="res://Recursos/Players/bunny2_hurt.png" type="Texture" id=8]
[ext_resource path="res://Juego/menus/botones/BotonMenuSalir.tscn" type="PackedScene" id=9]
[ext_resource path="res://Juego/menus/botones/BotonMenu.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=3]
size = 40
outline_color = Color( 0.921569, 0.780392, 0.909804, 1 )
font_data = ExtResource( 1 )

[node name="MenuGameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
menu_principal = "res://Juego/menus/MenuPrincipal.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.639216, 0.72549, 0.913725, 1 )

[node name="ParallaxBackgroundMenuPrincipal" type="ParallaxBackground" parent="."]
scroll_base_offset = Vector2( 0, -350 )

[node name="ParallaxFondo" type="ParallaxLayer" parent="ParallaxBackgroundMenuPrincipal"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 2048, 2048 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackgroundMenuPrincipal/ParallaxFondo"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="ParallaxNubesLejanas" type="ParallaxLayer" parent="ParallaxBackgroundMenuPrincipal"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackgroundMenuPrincipal/ParallaxNubesLejanas"]
margin_top = -614.0
margin_right = 2048.0
margin_bottom = 1434.0
texture = ExtResource( 6 )

[node name="ParallaxNubesMedias" type="ParallaxLayer" parent="ParallaxBackgroundMenuPrincipal"]
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackgroundMenuPrincipal/ParallaxNubesMedias"]
margin_top = -763.0
margin_right = 2048.0
margin_bottom = 1285.0
texture = ExtResource( 5 )

[node name="ParallaxNubesCercanas" type="ParallaxLayer" parent="ParallaxBackgroundMenuPrincipal"]
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackgroundMenuPrincipal/ParallaxNubesCercanas"]
margin_left = 8.0
margin_top = -873.0
margin_right = 2056.0
margin_bottom = 1175.0
texture = ExtResource( 7 )

[node name="GroundGrass" type="Sprite" parent="."]
position = Vector2( 333.5, 584 )
scale = Vector2( 0.813158, 0.595745 )
texture = ExtResource( 3 )

[node name="Bunny2Hurt" type="Sprite" parent="."]
position = Vector2( 331.5, 469 )
texture = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 823.0
margin_top = 186.0
margin_right = 1113.0
margin_bottom = 513.0

[node name="Reintentar" parent="VBoxContainer" instance=ExtResource( 10 )]
margin_right = 290.0
margin_bottom = 101.0
text = "Reintentar"

[node name="MenuPrincipal" parent="VBoxContainer" instance=ExtResource( 10 )]
margin_top = 105.0
margin_right = 290.0
margin_bottom = 206.0
text = "Menu principal"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 290.0
margin_bottom = 214.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 218.0
margin_right = 290.0
margin_bottom = 222.0

[node name="BotonMenuSalir" parent="VBoxContainer" instance=ExtResource( 9 )]
margin_top = 226.0
margin_right = 290.0
margin_bottom = 327.0

[node name="Panel" type="Panel" parent="."]
margin_left = 74.0
margin_top = 70.0
margin_right = 588.0
margin_bottom = 157.0
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.898039, 0.858824, 0.964706, 1 )

[node name="Label" type="Label" parent="Panel"]
modulate = Color( 0.392157, 0.360784, 0.666667, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -30.0
margin_right = 130.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "Game Over"

[connection signal="pressed" from="VBoxContainer/Reintentar" to="." method="_on_Reintentar_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuPrincipal" to="." method="_on_MenuPrincipal_pressed"]
